--- a/text/literatura.bib
+++ b/text/literatura.bib
@@ -34,5 +34,138 @@
  address = {Saarbrücken},
  publisher = {Betascript Publishing},
  year = {2010},
- isbn = {9786130317775}
+ isbn = {9786130317775},
 }
+
+@Book{learningPython,
+ title = {Learning Python},
+ author= {Mark Lutz, David Ascher},
+ address = {Sebastopol},
+ publisher = {O'Reilly and Associates, Inc.},
+ year = {2009},
+ isbn = {9788184048261},
+}
+
+@Book{qt,
+ title = {Grafická uživatelská rozhraní v Qt a C++},
+ author= {Martin Chroboczek},
+ address = {Brno},
+ publisher = {Computer Press},
+ year = {2013},
+ isbn = {9788025141243},
+}
+
+@Article{pecha2011monitorovani,
+  title={Monitorování radiace v časné fázi nehody na jaderném zařízení - analýza všech typů měření použitelných pro korekci modelových předpovědí},
+  author={Petr PECHA and Petr KUČA and Irena ČEŠPÍROVÁ and Radek HOFMAN},
+  year={2011},
+}
+
+@Article{metodika,
+  title = {Státní ústav radiační ochrany, v.v.i.: Metodika detekce radioaktivních látek na zasaženém území - Činnost mobilních skupin při monitorování radiační havárie},
+  year = {2015},
+  author = {Irena ČEŠPÍROVÁ},
+  url = {https://www.suro.cz/cz/vyzkum/vysledky/metodiky/Metodika%20detekce%20radioaktivnich%20latek%20na%20zasazenem%20uzemi.pdf},
+}
+
+@Online{who,
+  key	=	{zweb:who},
+  title  =	{World Health Organization: What is Ionizing Radiation?},
+  cited =   {2017-05-11},
+  url   =	{http://http://www.who.int/ionizing_radiation/about/what_is_ir},
+}
+
+@Online{ionZarUllman,
+  key	= {zweb:astronuklfyzika},
+  author = {Vojtěch ULLMANN},
+  title  =	{Ionizující záření},
+  cited =        {2017-05-11},
+  url   =	{http://astronuklfyzika.cz/JadRadFyzika6.htm},
+}
+
+@Online{bioZarUllman,
+  key	= {zweb:astronuklfyzika},
+  author = {Vojtěch ULLMANN},
+  title  =	{Biologické účinky ionizujícího záření},
+  cited =        {2017-05-11},
+  url   =	{http://astronuklfyzika.cz/RadiacniOchrana.htm},
+}
+
+@Online{CEZ,
+  key	=	{zweb:cez},
+  title  =	{Miniencyklopedie skupiny ČEZ: Jaderná energetika - ionizující záření},
+  cited =   {2017-05-11},
+  url   =	{https://www.cez.cz/edee/content/microsites/nuklearni/k22.htm},
+}
+
+@Online{atomInfo,
+  key	=	{zweb:atominfo},
+  title  =	{Atom info aktuálně o jádru: Sievert, becquerel, rentgen... Jak měříme radioaktivitu},
+  cited =   {2017-05-11},
+  url   =	{http://atominfo.cz/2012/05/sievert-becquerel-rentgen-jak-merime-radioaktivitu/},
+}
+
+@Online{radiobiologie,
+  key	=	{zweb:radiobiologie},
+  title  =	{Radiobiologie: Zdroje ionizujícího záření ve vztahu k ohrožení živého organismu},
+  cited =   {2017-05-11},
+  url   =	{http://fbmi.sirdik.org/4-kapitola},
+}
+
+@Online{sujbBiologickeUcinky,
+  key	=	{zweb:sjub},
+  title  =	{Státní úřad pro jadernou bezpečnost: Stručný přehled biologických účinků záření},
+  cited =   {2017-05-11},
+  url   =	{https://www.sujb.cz/radiacni-ochrana/oznameni-a-informace/strucny-prehled-biologickych-ucinku-zareni/},
+}
+
+@Online{sujbRadSit,
+  key	=	{zweb:sjub},
+  title  =	{Státní úřad pro jadernou bezpečnost: MonRaS - Monitorování radiační situace},
+  cited =   {2017-05-11},
+  url   =	{https://www.sujb.cz/monitorovani-radiacni-situace/},
+}
+
+@Online{nemoc,
+  key	=	{zweb:priznakyprojevy},
+  title  =	{Příznaky - projevy: Nemoc z ozáření, radiační syndrom - příznaky, projevy, symptomy},
+  cited =   {2017-05-11},
+  url   =	{http://www.priznaky-projevy.cz/traumatologie/nemoc-z-ozareni-radiacni-syndrom-priznaky-projevy-symptomy},
+}
+
+@Online{suroRadOch,
+  key	=	{zweb:suro},
+  title  =	{Státní ústav radiační ochrany, v.v.i.: Radiační ochrana},
+  cited =   {2017-05-11},
+  url   =	{https://www.suro.cz/cz/radiacni-ochrana},
+}
+
+@Online{suroPriRadOch,
+  key	=	{zweb:suro},
+  title  =	{Státní ústav radiační ochrany, v.v.i.: Principy radiační ochrany},
+  cited =   {2017-05-11},
+  url   =	{https://www.suro.cz/cz/radiacni-ochrana/principy-radiacni-ochrany},
+}
+
+@Online{suroOcek,
+  key	=	{zweb:suro},
+  title  =	{Státní ústav radiační ochrany, v.v.i.: Jaké hodnoty dávkového příkonu můžeme v ČR očekávat?},
+  cited =   {2017-05-11},
+  url   =	{https://www.suro.cz/cz/faq/jake-hodnoty-davkoveho-prikonu-muzeme-v-cr-ocekavat},
+}
+
+@Online{suroRMS,
+  key	=	{zweb:suro},
+  title  =	{Státní ústav radiační ochrany, v.v.i.: Informace o funkci a organizaci RMS},
+  cited =   {2017-05-11},
+  url   =	{https://www.suro.cz/cz/rms},
+}
+
+@Online{pythonHistory,
+  key	=	{zweb:pythoncourse},
+  title  =	{Python Course: History of Python},
+  cited =   {2017-05-11},
+  url   =	{http://www.python-course.eu/python3_history_and_philosophy.php},
+}
+
+
