--- a/text/2-teorie.tex
+++ b/text/2-teorie.tex
@@ -4,33 +4,30 @@ Tato kapitola se zabývá základy ionizujícího záření, jeho zdroji a biolo
 
 \section{Ionizující záření}
 	
-Záření (radiace) je proces, při kterém energie prochází prostorem. Typickými příklady záření, se kterými se setkáváme na denní bázi, je sluneční svit, rádiový, televizní nebo i wifi signál. % http://www.world-nuclear.org/information-library/safety-and-security/radiation-and-health/nuclear-radiation-and-health-effects.aspx
+Záření (radiace) je proces, při kterém energie prochází prostorem. Typickými příklady záření, se kterými se setkáváme na denní bázi, je sluneční svit, rádiový, televizní nebo i wifi signál. 
 
+Ionizující záření je záření s takovým množstvím energie, že může vyrážet elektrony z atomového obalu a tím látku ionizovat. Tento jev se využívá například v radiologii, lékařském oboru, který ionizující záření používá za účelem diagnóz, terapií a rozvoje vědy. \citep{who}
 
-Ionizující záření je záření s takovým množstvím energie, že může vyrážet elektrony z atomového obalu a tím látku ionizovat. Tento jev se využívá například v radiologii, lékařském oboru, který ionizující záření používá za účelem diagnóz, terapií a rozvoje vědy. %http://obory.vitalion.cz/radiologie/ %http://www.who.int/ionizing\_radiation/about/what\_is\_ir/en/
-
-\subsection{Druhy ionizujícího záření} %http://astronuklfyzika.cz/JadRadFyzika6.htm
-Ionizující záření se dělí na dva druhy:
+\subsection{Druhy ionizujícího záření} 
+Ionizující záření se dělí na dva druhy: \cite{ionZarUllman} \cite{CEZ}
 
 \begin{itemize}
 	\item \textbf{Přímo ionizující}
 	
-		Kvanta přímo ionizujícího záření nesou elektrický náboj a přímo vyrážejí elektrony z atomů. Součástí této kategorie je např. záření $\alpha$ (prudce letící kladná jádra izotopu helia $_{2}He^{4}$ %https://www.cez.cz/edee/content/microsites/nuklearni/k22.htm
-		), $\beta^{-}$ (proud elektronů vznikající při přeměně neutronu na proton %https://www.cez.cz/edee/content/microsites/nuklearni/k22.htm)
-		), $\beta^{+}$ (proud kladných pozitronů, antičástic k elektronům) %https://www.cez.cz/edee/content/microsites/nuklearni/k22.htm)
-		 atd.
+		Kvanta přímo ionizujícího záření nesou elektrický náboj a přímo vyrážejí elektrony z atomů. Součástí této kategorie je např. záření $\alpha$ (prudce letící kladná jádra izotopu helia $_{2}He^{4}$), $\beta^{-}$ (proud elektronů vznikající při přeměně neutronu na proton), $\beta^{+}$ (proud kladných pozitronů, antičástic k elektronům) atd.
 		 
 	\item \textbf{Nepřímo ionizující}
 	
-		Nepřímo ionizující záření předává svou kinetickou energii nabitým látkovým částicím, které pak látku ionizují. Kvanta tohoto záření tedy nejsou elektricky nabita. Do této kategorie se řadí především rentgenové a $\gamma$ záření (elektromagnetická záření s velmi nízkou vlnovou délkou). %http://astronuklfyzika.cz/JadRadFyzika6.htm	
+		Nepřímo ionizující záření předává svou kinetickou energii nabitým látkovým částicím, které pak látku ionizují. Kvanta tohoto záření tedy nejsou elektricky nabita. Do této kategorie se řadí především rentgenové a $\gamma$ záření (elektromagnetická záření s velmi nízkou vlnovou délkou). 
 \end{itemize}
 
-\subsection{Fyzikální jednotky} %http://atominfo.cz/2012/05/sievert-becquerel-rentgen-jak-merime-radioaktivitu/
+\subsection{Fyzikální jednotky} 
+V jaderné fyzice se jako základní jednotka používá becquerel [Bq] patřící mezi odvozené jednotky soustavy SI. Vyjadřuje střední počet radioaktivních přeměn za sekundu. Tato jednotka ovšem neříká nic o druhu záření, jeho biologickém účinku, energii atd. Pro popis ionizujícího záření jsou zavedeny veličiny, které slouží jako charakteristiky jeho účinků na různé látky. \cite{atomInfo}
 
 \begin{itemize}
 	\item \textbf{Dávka, dávkový příkon}
 	
-		V jaderné fyzice se jako základní jednotka používá becquerel [Bq] patřící mezi odvozené jednotky soustavy SI. Vyjadřuje střední počet radioaktivních přeměn za sekundu. Tato jednotka ovšem neříká nic o druhu záření, jeho biologickém účinku, energii atd. Pro popis ionizujícího záření jsou zavedeny veličiny, které slouží jako charakteristiky jeho účinků na různé látky. Nejdůležitější z těchto veličin je tzv. dávka, která má za jednotku gray [Gy] patřící mezi základní jednotky SI. Fyzikální rozměr jednotky gray je joule na kilogram [J/kg]. Častá veličina je dále tzv. dávkový příkon, tedy přírůstek dávky v čase [Gy/s]. 
+		 Nejdůležitější z těchto veličin je tzv. dávka, která má za jednotku gray [Gy] patřící mezi základní jednotky SI. Fyzikální rozměr jednotky gray je joule na kilogram [J/kg]. Častá veličina je dále tzv. dávkový příkon, tedy přírůstek dávky v čase [Gy/s]. 
 		
 	\item \textbf{Ekvivalentní dávka, ekvivalentní dávkový příkon}
 
@@ -54,28 +51,27 @@ Ionizující záření se dělí na dva druhy:
 \end{itemize}
 
 \subsection{Zdroje ionizujícího záření} 
-Zdroje ionizujícího záření mohou být přírodní a umělé. Největší ozáření obyvatelstva způsobují zdroje přírodní, přestože pozornost je věnována především zdrojům umělým. %http://fbmi.sirdik.org/4-kapitola/41.html
+Zdroje ionizujícího záření mohou být přírodní a umělé. Největší ozáření obyvatelstva způsobují zdroje přírodní, přestože pozornost je věnována především zdrojům umělým. \cite{radiobiologie}
 
 \begin{itemize}
 	\item \textbf{Přírodní zdroje záření}
 	
-			Tyto zdroje tvoří tzv. přírodní pozadí. Přírodní zdroje jsou dále rozděleny na dvě kategorie, kosmické záření a přírodní radionuklidy. %http://fbmi.sirdik.org/4-kapitola/42
-			Množství kosmického záření se odvíjí od nadmořské výšky a zeměpisné šířky kvůli působení zemského magnetického pole na dráhu nabitých částic. Například mezi 30$^{o}$ a 60$^{o}$ jižní resp. severní šířky je intenzita záření příbližně o 10\% vyšší než na rovníku a magnetických pólech. %http://fbmi.sirdik.org/4-kapitola/42/421.html
-			Zdroje přírodních radionuklidů jsou především horniny. Intenzita záření  se odvíjí od původů jednotlivých hornin. Pro ilustraci, vyvřelé horniny vykazují vyšší aktivitu než horniny metamorfované. %http://fbmi.sirdik.org/4-kapitola/42/422.html
+			Tyto zdroje tvoří tzv. přírodní pozadí. Přírodní zdroje jsou dále rozděleny na dvě kategorie, kosmické záření a přírodní radionuklidy. 
+			Množství kosmického záření se odvíjí od nadmořské výšky a zeměpisné šířky kvůli působení zemského magnetického pole na dráhu nabitých částic. Například mezi 30$^{o}$ a 60$^{o}$ jižní resp. severní šířky je intenzita záření příbližně o 10\% vyšší než na rovníku a magnetických pólech. 
+			Zdroje přírodních radionuklidů jsou především horniny. Intenzita záření  se odvíjí od původů jednotlivých hornin. Pro ilustraci, vyvřelé horniny vykazují vyšší aktivitu než horniny metamorfované.
 	
-	\item \textbf{Umělé zdroje záření} %http://fbmi.sirdik.org/4-kapitola/43.html
+	\item \textbf{Umělé zdroje záření} 
 	
-			Za umělé zdroje záření jsou považovány takové zdroje, které způsobují ozáření při činnostech s nimi, dále takové zdroje, které souvisí s lékařskými zákroky. Běžně se vedle lékařského ozáření další zdroje podílí na ozáření člověka pouze minimálně. Dalšími zdroji jsou radionuklidy nacházející se v životním prostředí pocházející ze spadu po mimořádných jaderných haváriích (poškození jaderného zařízení) nebo po zkouškách jaderných zbraní. Radionuklidy, které se dostaly do ovzduší, se dostávají na povrch ve formě suchého nebo mokrého spadu s deštěm, kde kontaminují vodu a potravu. %http://fbmi.sirdik.org/4-kapitola/43/432.html		
+			Za umělé zdroje záření jsou považovány takové zdroje, které způsobují ozáření při činnostech s nimi, dále takové zdroje, které souvisí s lékařskými zákroky. Běžně se vedle lékařského ozáření další zdroje podílí na ozáření člověka pouze minimálně. Dalšími zdroji jsou radionuklidy nacházející se v životním prostředí pocházející ze spadu po mimořádných jaderných haváriích (poškození jaderného zařízení) nebo po zkouškách jaderných zbraní. Radionuklidy, které se dostaly do ovzduší, se dostávají na povrch ve formě suchého nebo mokrého spadu s deštěm, kde kontaminují vodu a potravu.
 			
 \end{itemize}
 
 Podrobnější popis zdrojů ionizujícího záření by byl nad rámec této bakalářské práce, proto nebude dále rozebírán. 
 
 \subsection{Biologické účinky ionizujícího záření}
-Pro stanovení kritérií a principů radiační ochrany obyvatelstva a pracujících, kteří přicházejí se zdroji ionizujícího záření více do kontaktu, je potřeba vědět, jak ionizující záření působí na lidský organismus. Z těchto kritérií je dále odvozen systém limitování dávek (viz. kapitola \ref{sub:limity}). 
-%https://www.sujb.cz/radiacni-ochrana/oznameni-a-informace/strucny-prehled-biologickych-ucinku-zareni/
+Pro stanovení kritérií a principů radiační ochrany obyvatelstva a pracujících, kteří přicházejí se zdroji ionizujícího záření více do kontaktu, je potřeba vědět, jak ionizující záření působí na lidský organismus. Z těchto kritérií je dále odvozen systém limitování dávek (viz. kapitola \ref{sub:limity}). \cite{sujbBiologickeUcinky}
 
-Jak již bylo stručně popsáno, ionizující záření (radiace) způsobuje ionizaci atomů. Ta může dále vést k chemickým reakcím, fyzikálním změnám a v případě živých tkání k biochemickým změnám. Tyto změny mohou vést k poškození organismu nebo i k jeho úmrtí. Účinek radiace na organismus je rozdělen na 4 následující etapy: %http://astronuklfyzika.cz/RadiacniOchrana.htm#2
+Jak již bylo stručně popsáno, ionizující záření (radiace) způsobuje ionizaci atomů. Ta může dále vést k chemickým reakcím, fyzikálním změnám a v případě živých tkání k biochemickým změnám. Tyto změny mohou vést k poškození organismu nebo i k jeho úmrtí. Účinek radiace na organismus je rozdělen na 4 následující etapy: \cite{bioZarUllman}
 
 \begin{enumerate}
 	\item \textbf{Fyzikální stádium}
@@ -95,8 +91,10 @@ Jak již bylo stručně popsáno, ionizující záření (radiace) způsobuje io
 	Popsané molekulární změny mohou vyústit ve funkční a morfologické změny v buňkách, orgánech a poté i celkově v organismu. Trvání této fáze se pohybuje od jednotek sekund (buňky) až po několik let (organismus). Kdy se biologické stádium projeví, záleží na množství dávky záření. Při nízkých dávkách se může projevit až za několik desítek let, kdežto naopak při vysokých dávkách již během desítek minut. 
 \end{enumerate}
 
-Lidský organismus má omezenou schopnost opravy poškozených molekul buněk. Pokud však dávka překročí určitou mez, buňky uhynou a vzniká tzv. nemoc z ozáření. 	% všechno až sem: http://astronuklfyzika.cz/RadiacniOchrana.htm#2
-Nemoc z ozáření může být rozdělena na 2 kategorie: %http://www.priznaky-projevy.cz/traumatologie/nemoc-z-ozareni-radiacni-syndrom-priznaky-projevy-symptomy
+Lidský organismus má omezenou schopnost opravy poškozených molekul buněk. Pokud však dávka překročí určitou mez, buňky uhynou a vzniká tzv. nemoc z ozáření.
+
+
+Nemoc z ozáření může být rozdělena na 2 kategorie: \cite{nemoc}
 
 \begin{itemize}
 	\item \textbf{Akutní nemoc z ozáření}
@@ -106,33 +104,32 @@ Nemoc z ozáření může být rozdělena na 2 kategorie: %http://www.priznaky-p
 	\item \textbf{Chronická nemoc z ozáření}
 	
 		Tato forma nemoci z ozáření se rozvíjí při dlouhodobém působení malých dávek ionizujícího záření. Dále se dělí na 3 fáze. První z nich je fáze nespecifických obtíží způsobující nespavost, bolesti hlavy, pokles počtu bílých krvinek, zažívací obtíže atd. Další z fází je fáze výrazné symptomatologie, kde se stupňují bolesti hlavy, dochází k poruchám motoriky, k chronickým průjmům, váhovým úbytkům atd. Dochází k poškození centrálního nervového systému, což doprovází zhoršený sluch a zrak. Následuje poslední fáze nezvratného poškození. Přestávají fungovat rozmnožovací orgány, dochází k poškození srdce, ledvin, jater, dále se na kůži a sliznici tvoří vředy atd. 
-		%http://www.priznaky-projevy.cz/traumatologie/nemoc-z-ozareni-radiacni-syndrom-priznaky-projevy-symptomy
+
 \end{itemize}
 
-\section{Radiační ochrana} %https://www.suro.cz/cz/radiacni-ochrana
-Cílem radiační ochrany je zajistit ochranu obyvatelstva před účinky ionizujícího záření a zároveň umožnit z těchto účinků vytěžit co největší přínos (v radiologii, v jaderné energetice atp.). Důležitou součástí radiační ochrany je monitorování radiační situace. Nasbíraná data slouží pro posuzování stavu ozáření, pro další potřeby sledování a pro rozhodování o opatřeních v případě radiačních havárií. %https://www.sujb.cz/monitorovani-radiacni-situace/
+\section{Radiační ochrana} 
+Cílem radiační ochrany je zajistit ochranu obyvatelstva před účinky ionizujícího záření a zároveň umožnit z těchto účinků vytěžit co největší přínos (v radiologii, v jaderné energetice atp.). Důležitou součástí radiační ochrany je monitorování radiační situace. Nasbíraná data slouží pro posuzování stavu ozáření, pro další potřeby sledování a pro rozhodování o opatřeních v případě radiačních havárií. \cite{suroRadOch} \cite{sujbRadSit}
 
 \subsection{Limity expozice ionizujícímu záření v České republice}
 \label{sub:limity}
-Stupeň povoleného ozáření obyvatelstva se řídí omezeními, která jsou určována legislativou ve vyhláškách úřadů zabývajících se touto problematikou (\zk{SÚRO}, \zk{SÚJB}). Konkrétně pro Českou republiku je to vyhláška  307/2002 Sb. Celosvětově se ekvivalentní dávka resp. ekvivalentní dávkový příkon uvádí v jednotkách microsievert [$\mu$Sv] resp. microsievert za hodinu [$\mu$Sv/h]. Limity expozice ionizujícímu záření v ČR jsou patrné z obrázku \ref{fig:davkyCR}.
-%https://www.suro.cz/cz/faq/jake-hodnoty-davkoveho-prikonu-muzeme-v-cr-ocekavat %https://www.suro.cz/cz/radiacni-ochrana/principy-radiacni-ochrany
+Stupeň povoleného ozáření obyvatelstva se řídí omezeními, která jsou určována legislativou ve vyhláškách úřadů zabývajících se touto problematikou (\zk{SÚRO}, \zk{SÚJB}). Konkrétně pro Českou republiku je to vyhláška  307/2002 Sb. Celosvětově se ekvivalentní dávka resp. ekvivalentní dávkový příkon uvádí v jednotkách microsievert [$\mu$Sv] resp. microsievert za hodinu [$\mu$Sv/h]. Limity expozice ionizujícímu záření v ČR jsou patrné z obrázku \ref{fig:davkyCR}. \cite{suroPriRadOch} 
 
 \begin{figure}[H]
     \centering
     \includegraphics[scale=0.6]{./pictures/davkyCR.jpeg}
-      	\caption[Příklady expozice a limity]{Příklady expozice a limity}(zdroj:SÚJB, https://www.suro.cz/cz/faq/jake-hodnoty-davkoveho-prikonu-muzeme-v-cr-ocekavat)
+      	\caption[Příklady expozice a limity]{Příklady expozice a limity (zdroj:\cite{suroOcek})}
     	\label{fig:davkyCR}
 \end{figure} 
 
 \subsection{Pozemní monitorování radiační situace}
-Pomocí tzv. Radiační monitorovací sítě (\zk{RMS}) je zjišťována radiační situace na území České republiky. Na činnosti \zk{RMS} se podílejí resorty různých ministerstev (financí, obrany, vnitra atd.), dále držitelé povolení k provozu jaderných zařízení a hlavně Státní ústav radiační ochrany (\zk{SÚRO}). Řízením je pověřen Státní ústav pro jadernou bezpečnost (\zk{SÚJB}). %https://www.suro.cz/cz/rms
+Pomocí tzv. Radiační monitorovací sítě (\zk{RMS}) je zjišťována radiační situace na území České republiky. Na činnosti \zk{RMS} se podílejí resorty různých ministerstev (financí, obrany, vnitra atd.), dále držitelé povolení k provozu jaderných zařízení a hlavně Státní ústav radiační ochrany (\zk{SÚRO}). Řízením je pověřen Státní ústav pro jadernou bezpečnost (\zk{SÚJB}). \cite{suroRMS}
 
-Součástí \zk{RMS} jsou i mobilní skupiny (\zk{MS}), jejichž úkolem je dodat krizovému štábu při radiačních haváriích (radiační nehoda vyžadující opatření na ochranu obyvatelstva a životního prostředí) dostatek dat pro posouzení radiační situace a návrh nutných opatření. \zk{MS} při jízdě autem kontinuálně monitorují ekvivalentní dávky resp. ekvivalentní dávkové příkony (pro zjednodušení dále v textu jako dávky resp. dávkové příkony), odebírají vzorky složek životního prostředí atd. 
+Součástí \zk{RMS} jsou i mobilní skupiny (\zk{MS}), jejichž úkolem je dodat krizovému štábu při radiačních haváriích (radiační nehoda vyžadující opatření na ochranu obyvatelstva a životního prostředí) dostatek dat pro posouzení radiační situace a návrh nutných opatření. \zk{MS} při jízdě autem kontinuálně monitorují ekvivalentní dávky resp. ekvivalentní dávkové příkony (pro zjednodušení dále v textu jako dávky resp. dávkové příkony), odebírají vzorky složek životního prostředí atd.  \cite{metodika} \cite{pecha2011monitorovani}
 
 \begin{figure}[H]
     \centering
     \includegraphics[scale=0.6]{./pictures/vuzSURO.jpg}
-      	\caption[Vůz \zk{MS} \zk{SÚRO} Praha]{Vůz \zk{MS} \zk{SÚRO} Praha}(zdroj:Helebrant)
+      	\caption[Vůz \zk{MS} \zk{SÚRO} Praha]{Vůz \zk{MS} \zk{SÚRO} Praha (zdroj: Helebrant)}
     	\label{fig:vuzSURO}
 \end{figure} 
 
@@ -159,10 +156,8 @@ Obzvlášť pro časnou fázi radiační havárie je třeba, aby byly připraven
 \subsubsection{Bezpečnost práce}
 
 Členové \zk{MS} se účastní měření v souladu se zásadami bezpečnosti a ochrany zdraví, které stanovují příslušné zákony a vyhlášky (např. zákon č.309/2006 Sb. - zákon o zajištění dalších podmínek bezpečnosti a ochrany zdraví při práci). Pracovníci používají při výjezdech osobní ochranné pomůcky (ochranný oděv, pracovní obuv, respirátor atd.) a dále jsou vybaveni osobními dozimetry. 
-%%asim.utia.cas.cz/reporty/2011/HZS_FINAL_po%20zkraceni.pdf
-%https://www.suro.cz/cz/vyzkum/vysledky/metodiky/Metodika%20detekce%20radioaktivnich%20latek%20na%20zasazenem%20uzemi.pdf/view
 
 \section{Přínos bakalářské práce}
 Během pozemního monitorování dochází k absorbaci škodlivých látek pracovníky \zk{MS}. Legislativou jsou stanoveny hodnoty, které množství absorbované dávky nesmí překročit. V závislosti na bezpečnosti práce je tedy třeba plánovat trasy monitorování tak, aby pracovníci \zk{MS} nebyli vystaveni zdraví ohrožujícím dávkám. 
 
-Vytvářený softwarový nástroj, který je předmětem této bakalářské práce, má sloužit jako pomůcka k plánování bezpečných tras monitorování. Dle výsledků výpočtu nástroje, tedy mimo jiné nakumulovaných dávek v jednotlivých bodech trasy, může krizový štáb upravit trasu, případně modifikovat doporučenou rychlost vozidla tak, aby se dlouho nezdržovalo v simulaci vytipovaných horkých místech. Jelikož hodnoty vstupující do výpočtu jsou interpolované a nejsou tedy exaktní, nástroj také neposkytuje exaktní výsledky a není možné ho použít pro důležitá rozhodování, např. o evakuaci obyvatelstva atp. Dalším využitím nástroje může být například plánování tras evakuace obyvatel z vybraných oblastí při havarijním plánování nebo cvičení. Nástroj byl vytvořen na objednávku Státního ústavu radiační ochrany, v. v. i.
+Vytvářený softwarový nástroj, který je předmětem této bakalářské práce, má sloužit jako pomůcka k plánování bezpečných tras monitorování. Dle výsledků výpočtu nástroje, tedy mimo jiné nakumulovaných dávek v jednotlivých bodech trasy, může krizový štáb upravit trasu, případně modifikovat doporučenou rychlost vozidla tak, aby se dlouho nezdržovalo v simulaci vytipovaných horkých místech. Jelikož hodnoty vstupující do výpočtu jsou interpolované a nejsou tedy exaktní, nástroj také neposkytuje exaktní výsledky a není možné ho použít pro důležitá rozhodování, např. o evakuaci obyvatelstva atp. Dalším využitím nástroje může být například plánování tras evakuace obyvatel z vybraných oblastí při havarijním plánování nebo cvičení. Nástroj byl vytvořen na objednávku Státního ústavu radiační ochrany, v.v.i.
