--- a/text/michael-kala-bp-2017.tex
+++ b/text/michael-kala-bp-2017.tex
@@ -120,7 +120,6 @@
 \misto{Praha}
 
 %% Abstrakt
-%%% ML: rozsirit, kopie zadani je pro abstrakt malo
 \abstrakt 
 {Cílem této bakalářské práce je implementace softwarového nástroje umožňujícího plánování optimálních tras pozemního monitorování radiace. Při únicích radioaktivních látek do ovzduší je specializovanými softwary spočtena prognóza šíření radioaktivního mraku. Jedním z produktů této prognózy je také mapa dávkových příkonů záření gama pro zasaženou oblast. Na základě této mapy vytvářený softwarový nástroj určí přibližný odhad dávky záření, kterou obdrží mobilní skupina provádějící měření na dané trase v~postiženém území. V případě překročení hraničních hodnot nástroj pomůže v~přeplánování trasy přes jiné komunikace příp. změny doporučené rychlosti jízdy vozidla tak, aby mobilní skupina nebyla vystavována nebezpečným dávkám.}
 {The aim of this bachelor thesis is the implementation of a software tool enabling the management of routes of the ground radiation monitoring. During nuclear disasters, the radioactive substances pollute the environment. Specialized softwares are capable of making a prediction of the spread of the radiation cloud. One of the products of the prediction is also a map of dose rates of the gamma radiation. Based on this map, the created software tool calculates an estimate of the gamma radiation dose which a mobile group doing the field work would obtain on a given route. In case the dose limit value is exceeded, the tool helps to plan changes of the route waypoints using other roads or to modify the recommended speed of the vehicle so the field mobile group would not obtain those values of the dose, that are dangerous or even lethal.}
@@ -182,7 +181,7 @@
 	\vspace{1em}
 		%\noindent
 	\par\hspace{2ex}
-	{Chtěl bych poděkovat rodině, Ing. Landovi Ph.D. a Mgr. Helebrantovi... }
+	{Rád bych poděkoval Velkému třesku za vznik vesmíru z nekonečně husté singularity, díky čemuž vznikl i život a já a tato práce. Také bych se nedokázal obejít bez své rodiny a blízkých, díky kterým jsem v posledních měsících nemusel trávit večery sám s myšlenkami o mém počínání. Největší díky bych chtěl věnovat mému vedoucímu práce Ing. Martinu Landovi Ph.D. za to, že mě na rozdíl od přátel k práci velmi motivoval a příkladně jí vedl. Nakonec bych rád poděkoval Mgr. Janu Helebrantovi (SÚRO) za cenné připomínky a vždy bleskové odpovědi na mé dotazy.}
 }
 
 % Vysázení obsahu
