Text and documentation update.

--- a/text/2-teorie.tex
+++ b/text/2-teorie.tex
@@ -129,7 +129,7 @@ Součástí \zk{RMS} jsou i mobilní skupiny (\zk{MS}), jejichž úkolem je doda
 \begin{figure}[H]
     \centering
     \includegraphics[scale=0.6]{./pictures/vuzSURO.jpg}
-      	\caption[Vůz \zk{MS} \zk{SÚRO} Praha]{Vůz \zk{MS} \zk{SÚRO} Praha (zdroj: Helebrant)}
+      	\caption[Vůz \zk{MS} \zk{SÚRO} Praha]{Vůz \zk{MS} \zk{SÚRO} Praha (zdroj: SÚRO, v.v.i.)}
     	\label{fig:vuzSURO}
 \end{figure} 
 
