--- a/text/4-plugin.tex
+++ b/text/4-plugin.tex
@@ -18,7 +18,7 @@ Zadáním bakalářské práce bylo vytvoření softwarového nástroje, který 
 \begin{figure}[H]
     \centering
     \includegraphics[scale=0.6]{./pictures/ukazka_vstupnich_dat.png}
-    \caption[Ukázka vstupních dat]{Ukázka vstupních dat (zdroj: vlastní, data poskytnutá od \zk{SÚRO})}
+    \caption[Ukázka vstupních dat]{Ukázka vstupních dat (zdroj: vlastní, data poskytnutá od SÚRO, v.v.i.)}
     \label{fig:vstup}
 \end{figure}
   			
@@ -129,7 +129,7 @@ V této části práce bude popsán algoritmus kódu. Nejprve bude prezentováno
 \begin{figure}[H]
     \centering
     \includegraphics[scale=0.4]{./pictures/computation_scheme.png}
-      	\caption[Schéma výpočtu]{Schéma výpočtu (zdroj: Helebrant)}
+      	\caption[Schéma výpočtu]{Schéma výpočtu (zdroj: SÚRO, v.v.i.)}
     	\label{fig:SchemeOfComputation}
 \end{figure}
 
@@ -274,7 +274,7 @@ Z balíku dat byla vybrána zájmová oblast kolem jaderné elektrárny Fukushim
 \begin{figure}[H]
     \centering
     \includegraphics[scale=0.4]{./pictures/interpolovana_mapa.png}
-      	\caption[Interpolovaná mapa dávkových příkonů (prefektura Fukushima)]{Interpolovaná mapa dávkových příkonů gama záření (prefektura Fukushima)}(zdroj: vlastní, data poskytnutá od \zk{SÚRO})
+      	\caption[Interpolovaná mapa dávkových příkonů (prefektura Fukushima)]{Interpolovaná mapa dávkových příkonů gama záření (prefektura Fukushima)}(zdroj: vlastní, data poskytnutá od SÚRO, v.v.i.)
     	\label{fig:interpolatedMap}
 \end{figure} 
 
@@ -284,9 +284,7 @@ Trasy monitorování použité pro testování byly naplánovány pomocí běžn
 \begin{figure}[H]
     \centering
     \includegraphics[scale=0.2]{./pictures/trasa_monitorovani.png}
-      	\caption[Trasa monitorování (Futaba-Nawashirogae, prefektura Fukushima)]{Trasa monitorování (Futaba-Nawashirogae, prefektura Fukushima)}(zdroj: vlastní, data poskytnutá od \zk{SÚRO})
+      	\caption[Trasa monitorování (Futaba-Nawashirogae, prefektura Fukushima)]{Trasa monitorování (Futaba-Nawashirogae, prefektura Fukushima)}(zdroj: vlastní, data poskytnutá od SÚRO, v.v.i.)
     	\label{fig:interpolatedMap}
 \end{figure}
 
-\section{Licence a dostupnost zásuvného modulu}
-Zásuvný modul je volně dostupný pod licencí \zk{GNU GPL} z oficiálního repositáře ???.
