--- a/text/5-zaver.tex
+++ b/text/5-zaver.tex
@@ -8,7 +8,8 @@ Vytvářený nástroj ze vstupní interpolované mapy dávkových příkonů gam
 Nástroj byl s pomocí návrhů a požadavků na úpravy od pracovníků \zk{SÚRO} vytvořen na míru tak, aby splnil očekávání a byl zároveň co nejvíce intuitivní. Nástroj byl vytvořen v anglickém jazyce s vidinou jeho využití i v jiných než českých institucích. Zároveň byl v angličtině vytvořen návod na jeho používání. 
 
 
-
+\section{Licence a dostupnost zásuvného modulu}
+Zásuvný modul byl vytvořen pod licencí \zk{GNU GPL}, kterou podědil po QGIS knihovnách, jež byly k implementaci využity. Zásuvný modul je volně dostupný z CTU GeoForAll Lab QGIS repozitáře\footnote{\texttt{https://ctu-geoforall-lab-projects.github.io/bp-kala-2017/}}. V budoucnu je dále v plánu začlenění zásuvného modulu do oficiálního QGIS repozitáře.
 
 
  
